crates/typechecker/tests/snapshots/fixture_test__prelude_shadow.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
MyVariant: forall h. fn(h) -> Option<h>
MyNone: forall h. Option<h>
main: fn() -> Option<own Int>
