crates/typechecker/tests/snapshots/fixture_test__return_annotation_own_coerce.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall d. fn(d, d) -> Bool
lt: forall e. fn(e, e) -> Bool
combine: forall d. fn(d, d) -> d
sub: forall d. fn(d, d) -> d
mul: forall d. fn(d, d) -> d
div: forall d. fn(d, d) -> d
neg: forall d. fn(d) -> d
show: forall d. fn(d) -> String
hash: forall d. fn(d) -> Int
close: forall d. fn(own d) -> Unit
peek: forall e. fn(e) -> e
println: forall j. fn(j) -> Unit
Some: forall c. fn(c) -> Option[c]
None: forall c. Option[c]
Ok: forall d e. fn(e) -> Result[d, e]
Err: forall d e. fn(d) -> Result[d, e]
Cons: forall f. fn(f, List[f]) -> List[f]
Nil: forall f. List[f]
LT: Ordering
EQ: Ordering
GT: Ordering
f: fn(own String) -> String
