crates/typechecker/tests/snapshots/fixture_test__return_annotation_upgrade_error.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall g. fn(g, g) -> Bool
lt: forall h. fn(h, h) -> Bool
combine: forall g. fn(g, g) -> g
sub: forall g. fn(g, g) -> g
mul: forall g. fn(g, g) -> g
div: forall g. fn(g, g) -> g
neg: forall g. fn(g) -> g
show: forall g. fn(g) -> String
hash: forall g. fn(g) -> Int
close: forall g. fn(~g) -> Unit
peek: forall h. fn(h) -> h
last: forall q3. fn(List[q3]) -> Option[q3]
sort_by: forall k5 v5. fn(List[v5], fn(v5) -> k5) -> List[v5]
filter: forall g1. fn(List[g1], fn(g1) -> Bool) -> List[g1]
to_list: forall r1 y1. fn(Vec[r1]) -> List[y1]
println: forall m. fn(m) -> Unit
Some: forall e. fn(e) -> Option[e]
None: forall e. Option[e]
Ok: forall f g. fn(g) -> Result[f, g]
Err: forall f g. fn(f) -> Result[f, g]
Cons: forall h. fn(h, List[h]) -> List[h]
Nil: forall h. List[h]
LT: Ordering
EQ: Ordering
GT: Ordering
f: fn() -> ~String
